--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"GENERAL": {
-		"token": "MTEyOTg1MzMyOTEyMDQ0NDY0Ng.G_chtR.SOr8ZBfkqCO-QybbauBzv4li7wND1f8Suc8_mI",
+		"token": "MTEyOTg1MzMyOTEyMDQ0NDY0Ng.GJAoWM.GksdApoLvmXXuflenzWnEWhLTeN_-Zk1698Zz0",
 		"prefix": ".",
 		"theme": "standart"
 	},
